logs/gitenberg.metadata.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/SPARQLWrapper'...
Listing './lib/python3.5/site-packages/SPARQLWrapper-1.6.4.egg-info'...
Listing './lib/python3.5/site-packages/gitenberg'...
Listing './lib/python3.5/site-packages/gitenberg/metadata'...
Compiling './lib/python3.5/site-packages/gitenberg/metadata/marc.py'...
***   File "./lib/python3.5/site-packages/gitenberg/metadata/marc.py", line 55
    print tokens[-1] + ', ' + ' '.join(tokens[0:-1])
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gitenberg/metadata/pg_rdf.py'...
***   File "./lib/python3.5/site-packages/gitenberg/metadata/pg_rdf.py", line 127
    print val
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gitenberg.metadata-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/serializer'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib/trie'...
Listing './lib/python3.5/site-packages/html5lib-0.999999.egg-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymarc'...
Listing './lib/python3.5/site-packages/pymarc-3.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.0.egg-info'...
Listing './lib/python3.5/site-packages/rdflib_jsonld'...
Listing './lib/python3.5/site-packages/rdflib_jsonld-0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test.py'...
***   File "./lib/python3.5/site-packages/tests/test.py", line 22
    print self.pandata
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
